--- a/SERVICES/treasury-arena/requirements.txt
+++ b/SERVICES/treasury-arena/requirements.txt
@@ -37,3 +37,9 @@ pytest-asyncio==0.21.1
 # Utils
 python-dotenv==1.0.0
 pyyaml==6.0.1
+
+# Simulation Engine Dependencies
+aiohttp>=3.9.0
+click>=8.1.0
+tqdm>=4.66.0
+structlog>=23.2.0
